src/test/deca/context/valid/field_of_object_type.deca
/*
    Description : Test sur la gestion d'un champ de type Object

    Résultat : OK
*/
class A
{
    Object b;
}
// @expected_tree unknown

